Header spacing fixes

--- a/public/src/styles/admin/sass/admin.scss
+++ b/public/src/styles/admin/sass/admin.scss
@@ -34,11 +34,6 @@ h4 {
 .navbar {
   padding: 1rem;
 }
-.navbar-brand {
-  transform: translateY(-3px);
-  -webkit-transform: translateY(-3px);
-  -ms-transform: translateY(-3px);
-}
 /* BASIC STYLES */
 .broker-btn {
   padding: .675rem 3rem;
